<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_file_ops"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/menu_file_ops">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_move"
                    android:icon="@drawable/ic_action_cut_tinted"
                    android:title="@string/menu_move" />
                <item
                    android:id="@+id/menu_copy"
                    android:icon="@drawable/ic_action_copy_tinted"
                    android:title="@string/menu_copy" />
                <item
                    android:id="@+id/menu_compress"
                    android:icon="@drawable/ic_action_box_tinted"
                    android:title="@string/menu_compress" />
                <item
                    android:id="@+id/menu_delete"
                    android:icon="@drawable/ic_action_delete_tinted"
                    android:title="@string/menu_delete" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_send"
        android:icon="@drawable/ic_action_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_select_all"
        android:showAsAction="never"
        android:title="@string/menu_check_all" />

</menu>